--- a/profiles/vp_profile/themes/vp_theme/sass/includes/10-portal-navigation/language-switcher.scss
+++ b/profiles/vp_profile/themes/vp_theme/sass/includes/10-portal-navigation/language-switcher.scss
@@ -21,6 +21,7 @@
         font-family: $font_museo500;
         height: 31px;
         line-height: 30px;
+        margin-bottom: 0;
         overflow: hidden;
         padding: 4px 4px 0 4px;
         text-align: center;
