--- a/profiles/vp_profile/themes/vp_theme/sass/includes/10-portal-navigation/search.scss
+++ b/profiles/vp_profile/themes/vp_theme/sass/includes/10-portal-navigation/search.scss
@@ -11,6 +11,7 @@
       cursor: pointer;
       direction: ltr;
       height: 35px;
+      margin-bottom: 0;
       overflow: hidden;
       text-indent: -10000px;
       width: 35px;
